--- a/cypress-compose.yml
+++ b/cypress-compose.yml
@@ -5,6 +5,7 @@ services:
     command: "--browser chrome"
     environment: 
         - CYPRESS_baseUrl=http://192.168.25.19:8002/tasks
+        - NO_COLOR=1
     volumes:
         - ./cypress:/cypress
         - ./cypress.config.js:/cypress.config.js
